# vk-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
vk_cli/: main.py  profile.py  shell.py  text.py  vk.py
vk_cli/completion/: base_api_completion.py
vk_cli/shell/: shell.py
