[tool.poetry]
name = "vk-cli"
version = "0.1.1"
description = "VK call api in console"
authors = ["sergey <saalaus@mail.ru>"]
readme = "README.md"
homepage = "https://github.com/saalaus/vk-cli"
repository = "https://github.com/saalaus/vk-cli"
keywords = ["vk_api", "vk", "cli"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
vk = "vk_cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
